ceph/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  tls:
   - hosts:
     - rook.apps.hotcuppa.co
     secretName: rook-tls
  rules:
  - host: rook.apps.hotcuppa.co
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard-external-https
          servicePort: 8443
